--- a/User_Management/package.json
+++ b/User_Management/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
+    "epress": "^0.0.1-security",
     "express": "^4.21.2",
     "install": "^0.13.0",
     "nodemon": "^3.1.9",
